# Clow-Litle-Ultra

./: ANÁLISIS_COMPLETO_49_TESTS.md  ANÁLISIS_TESTS_FALLIDOS.md  CHANGELOG.md  CLAW_LITE_ULTRA_PRO_2.0_Plan_de_Produccion.docx  CONTRIBUTING.md  Claw-Lite-Parte-2.xml  Claw-Lite-Parte-3.xml  Claw-Lite-Ultra-Parte-1.xml  GUIA_INSTALACION.md  QUICKSTART.md  README.md  RESUMEN_EJECUTIVO_FIX.md  dev.nix  fix_all_tests_termux.sh  pyproject.toml  requirements-dev.txt  requirements-termux.txt  requirements.txt  run.sh
.idx/: dev.nix
claw-lite-ultra-pro/: requirements.txt
claw-lite-ultra-pro/src/: intent_router.py  main.py
claw-lite-ultra-pro/src/channels/: terminal_cli.py
claw-lite-ultra-pro/src/config/: config_loader.py  defaults.toml  (+1 more)
docs/: CAPA3_AGENTES_SISTEMAS.md  ESTADO_PROYECTO_V4.md  IMPLEMENTACION_V4_RESUMEN.md  PLAN_INTEGRACION_MYTHOS.md  PLAN_MEJORAS_V4.md  TUTORIAL_INTERACTIVO.md
examples/: 01_web_search_example.py  02_code_generation_example.py  README.md
models/: DESCARGA_MODELO.md  README.md
scripts/: auto_updater.py  backup_manager.py  release_checklist.py
src/: __init__.py  __main__.py  environment_detector.py  gateway.py  hybrid_engine.py  intent_classifier.py  personality_engine.py  router.py
src/agents/: swarm_manager.py
src/claw_litle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/code_gen/: buddy_reviewer.py  sandbox_executor.py  self_healing_engine.py  template_engine.py
src/config/: defaults.toml  intents_registry.json
src/engine/: __init__.py  nivel_1_regex.py  nivel_2_fuzzy.py  nivel_3_semantic.py  nivel_4_expert.py
src/features/: __init__.py  adaptive_thinking_controller.py  context_manager.py  enhanced_buddy_reviewer.py  feature_flags.py  kairos_daemon.py  query_complexity_analyzer.py  security_analyst.py  self_refining_engine.py
src/licensing/: __init__.py  license_manager.py
src/optimization/: __init__.py  battery_saver.py  memory_optimizer.py
src/persistence/: vector_store_sqlite.py
src/security/: code_integrity.py
src/vision/: permission_manager.py  screen_capture.py  ui_parser.py
tests/: benchmark_performance.py  conftest.py  run_all_tests.sh  test_code_integrity.py  test_hybrid_engine.py  test_sandbox_executor.py  test_self_healing.py  test_semantic_engine.py  test_swarm.py  test_termux_compatibility.py  test_thermal_swarm.py  test_vector_store_sqlite.py
tests/integration/: test_integration.py  test_v4_integration.py
tests/unit/: test_expert_system.py  test_feature_flags.py  test_fuzzy_engine.py  test_gateway.py  test_query_complexity_analyzer.py  test_regex_engine.py  test_self_refining_engine.py  test_swarm_manager.py
(+11 files in other folders)
